correction affichage posts sur accueil du blog overflow scroll + min et max height

--- a/src/scss/faq.scss
+++ b/src/scss/faq.scss
@@ -246,10 +246,9 @@ article {
         border: 1px solid #cecece;
         transition: all ease 0.7s;
         padding-bottom: 10px;
-        border-radius: 10px;
-        min-height:300px;
-        max-height:300px;
-        overflow:scroll;
+        border-radius: 5%;
+        // min-height:300px;
+        // max-height:300px;
         &:hover {
             box-shadow: 0 0 20px #a1a1a1;
             transition: all ease 0.7s;
